# vllm-ascend

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  test.txt
.github/workflows/: nightly_test_a3.yaml  test_push.yaml  vllm_ascend_test.yaml
.opencode/agents/: analyzer_qa.md
docs/: guide.md
main2main_flow/: cli.py  flow.py  utils.py
main2main_flow/agent/: opencode_adapter.py  prompt.md
main2main_flow/reference/: adapt-guide.md  diagnosis-guide.md  error-pattern-examples.md
main2main_flow/scripts/: detect_commits.py  push_to_github.py  run_tests.py
src/: cli.py  flow.py  utils.py
src/agent/: opencode_adapter.py
src/main2main_flow/: main.py  utils.py
src/main2main_flow/crews/adapter_crew/: adapter_crew.py  claude_code_adapter.py  opencode_adapter.py  prompt.md
src/main2main_flow/crews/adapter_crew/config/: agents.yaml  orchestrator.md
src/main2main_flow/crews/summary_crew/: summary_crew.py
src/main2main_flow/crews/summary_crew/config/: agents.yaml  tasks.yaml
src/main2main_flow/scripts/: detect_commits.py  plan_steps.py  pre_ci_check.py  push_to_github.py  run_tests.py  update_commit_reference.py
src/reference/: code-structure-guide.md
src/scripts/: ci_log_summary.py  detect_commits.py  plan_steps.py  pre_ci_check.py  push_to_github.py  run_tests.py  update_commit_reference.py
tests/e2e/nightly/multi_node/config/: Qwen3-235B-A22B-Mooncake-Layerwise.yaml
tests/e2e/pull_request/one_card/model_runner_v2/: test_basic.py
vllm_ascend/lora/punica_wrapper/: lora_ops.py
