[project]
name = "main2main_flow"
version = "0.1.0"
description = "main2main_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5"
]

[project.scripts]
kickoff = "main2main_flow.main:kickoff"
run_crew = "main2main_flow.main:kickoff"
plot = "main2main_flow.main:plot"
run_with_trigger = "main2main_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
