[project]
name = "main2main_flow"
version = "0.1.0"
description = "main2main_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5"
]

[project.scripts]
kickoff = "cli:kickoff"
run_crew = "cli:kickoff"
plot = "cli:plot"
run_with_trigger = "cli:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/reference", "src/scripts"]

[tool.hatch.build.targets.wheel.force-include]
"src/cli.py" = "cli.py"
"src/flow.py" = "flow.py"
"src/utils.py" = "utils.py"

[tool.crewai]
type = "flow"
